@@ -25,6 +25,7 @@ News
 * **Bugfix:** If track performer is empty, try album performer instead.
 * **Bugfix:** Failing to mount Fuse during "make check" went unnoticed as the result code (which was supposed to be 99) was actually 0. Now nonzero is returned.
 * **Bugfix:** The Docker build command contained a "make check" which actually failed altogether. Step has been removed, "make check" mounts Fuse but this requires privileges that do not exist during "docker build".
+* **Bugfix:** mremap() returns MAP_FAILED on error, not NULL. Fixed check for wrong error condition, could cause the application to crash or return stupid error messages.
 
 ### Version 2.10 released
 
