@@ -21,6 +21,9 @@ Important changes in 2.11 (2022-05-XX):
 * Bugfix: The Docker build command contained a "make check" which actually failed
   altogether. Step has been removed, "make check" mounts Fuse but this requires
   privileges that do not exist during "docker build".
+* Bugfix: mremap() returns MAP_FAILED on error, not NULL. Fixed check for wrong
+  error condition, could cause the application to crash or return stupid error
+  messages.
 
 Important changes in 2.10 (2022-04-26):
 
